complate testFindIntsersections